# ShiroTweet

./: .gitignore  Cargo.toml  remove_id_from_db.sh
src/: downloader.rs  fetcher.rs  summarizer.rs  tweet_db.rs  tweet_fetcher.rs  tweet_parser.rs  twitter_def.rs  utils.rs
