[package]
name = "shirotweets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shirotweet-fetcher"
path = "src/fetcher.rs"

[[bin]]
name = "shirotweet-summarizer"
path = "src/summarizer.rs"

[[bin]]
name = "shirotweet-downloader"
path = "src/downloader.rs"

[dependencies]
#headless_chrome = {git = "https://github.com/Oyami-srk/rust-headless-chrome", branch="shiroko-change"}
#headless_chrome = { path = "../Forks/rust-headless-chrome"}
#headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
headless_chrome = "1.0.9"
anyhow = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4"
env_logger = "0.9"
regex = "1.5"
lazy_static = "1.4"
rusqlite = "0.27"
indicatif = "0.17.0-rc.11"
console = "0.15"
chrono = "0.4"
rayon = "1.5"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
clap = { version = "3.2", features = ["derive"] }
rpassword = "6.0"
#shirodl = { git = "https://github.com/Oyami-Srk/shirodl" }
shirodl = { path = "../shirodl" }